# tim

./: .gitignore  .hgignore  CMakeLists.txt  Tim.sln  blog.txt  build.bat  build_tim.m  building.txt  building_matlab.txt  dependencies.txt  faq.txt  implementation.txt  index.htm  more_news.txt  premake4.lua  previous_releases.txt  release_history.txt  remark_config.json  remark_options  tim.sublime-workspace  tim.txt  tim_license.txt  tim_license_matlab.txt  tutorials.txt  user_documentation.txt
TimMex/: TimMex.vcproj  build_options.txt  build_tim.m  differential_entropy.m  differential_entropy_t.m  entropy_combination.m  entropy_combination_t.m  mutual_information.m  mutual_information_naive.m  mutual_information_p.m  mutual_information_pt.m  mutual_information_t.m  partial_mutual_information.m  temporal_differential_entropy.m  temporal_mutual_information.m  temporal_partial_mutual_information.m  temporal_transfer_entropy.m  timDifferentialEntropy.cpp  timMutualInformation.cpp  timMutualInformationNaive.cpp  timPartialMutualInformation.cpp  timTemporalDifferentialEntropy.cpp  timTemporalMutualInformation.cpp  timTemporalPartialMutualInformation.cpp  timTransferEntropy.cpp  tim_matlab.txt  transfer_entropy.m  transfer_entropy_p.m  transfer_entropy_pt.m  transfer_entropy_t.m
cmake/: FindPastel_.cmake  FindTbb_.cmake  Paths.cmake  SetupCompilers.cmake  ecmake.cmake
core/: TimCore.vcproj  basics.txt  differential_entropy.cpp  differential_entropy.h  differential_entropy.hpp  differential_entropy.txt  differential_entropy_analytic.cpp  differential_entropy_analytic.h  differential_entropy_kl.cpp  differential_entropy_kl.h  differential_entropy_kl.hpp  embed.cpp  embed.h  embed.hpp  entropy_combination.h  entropy_combination.hpp  entropy_combination.txt  estimators.txt  mutual_information.cpp  mutual_information.h  mutual_information.hpp  mutual_information.txt  mutual_information_analytic.cpp  mutual_information_analytic.h  mutual_information_ec.cpp  mutual_information_ec.h  mutual_information_ec.hpp  mutual_information_kraskow.cpp  mutual_information_kraskow.h  mutual_information_kraskow.hpp  mutual_information_naive.cpp  mutual_information_naive.h  mutual_information_naive.hpp  mytypes.h  partial_mutual_information.cpp  partial_mutual_information.h  partial_mutual_information.hpp  partial_mutual_information.txt  signal.cpp  signal.h  (+21 more)
estimation/: Estimation.vcproj  config_performance.txt  differential_entropy_usecase.cpp  estimation.cpp  estimation.h  estimation2.cpp  estimation_main.cpp  signal_usecase.cpp  test_differential_entropy.cpp  test_mutual_information.cpp  test_nearest_performance.cpp  test_signal.cpp  test_transfer_entropy.cpp
matlab/: CMakeLists.txt  build_tim.template.m  form_build_command.template.m  tim_package.m
mex/: entropy_combination_t.m  mutual_information_p.m  timTemporalEntropyCombination.cpp  transfer_entropy.m  transfer_entropy_pt.m
test/: CMakeLists.txt
tim/: CMakeLists.txt  (+6 more)
tim/core/: CMakeLists.txt  TimCore.vcproj  TimCore.vcxproj  TimCore.vcxproj.filters  basics.txt  delay_embed.cpp  delay_embed.h  delay_embed.hpp  delay_embed.txt  differential_entropy.h  differential_entropy.txt  differential_entropy_analytic.cpp  differential_entropy_analytic.h  differential_entropy_analytic.txt  differential_entropy_generalized_normal.h  differential_entropy_generalized_normal.hpp  differential_entropy_kl.cpp  differential_entropy_kl.h  differential_entropy_kl.hpp  differential_entropy_kl.txt  differential_entropy_kl_details.txt  differential_entropy_nk.h  differential_entropy_nk.hpp  differential_entropy_nk.txt  differential_entropy_normal.h  differential_entropy_normal.hpp  differential_entropy_sp.h  differential_entropy_sp.hpp  differential_entropy_sp.txt  differential_entropy_uniform.h  differential_entropy_uniform.hpp  digamma_localestimator.h  digammadensity_localestimator.h  divergence.txt  divergence_wkv.cpp  divergence_wkv.h  divergence_wkv.hpp  divergence_wkv.txt  embed.cpp  embed.h  (+105 more)
tim/corematlab/: CMakeLists.txt  matlab_differential_entropy_generalized_normal.cpp  matlab_differential_entropy_kl.cpp  matlab_differential_entropy_kl_t.cpp  matlab_differential_entropy_nk.cpp  matlab_differential_entropy_normal.cpp  matlab_differential_entropy_sp.cpp  matlab_differential_entropy_uniform.cpp  matlab_divergence_wkv.cpp  matlab_entropy_combination.cpp  matlab_entropy_combination_t.cpp  matlab_mutual_information_naive.cpp  matlab_mutual_information_normal.cpp  matlab_renyi_entropy_lps.cpp  matlab_renyi_entropy_lps_t.cpp  matlab_tsallis_entropy_lps.cpp  matlab_tsallis_entropy_lps_t.cpp  support_functions.txt  tim_matlab.cpp  tim_matlab.h  tim_matlab.txt  tim_matlab_impl.txt  tim_mex.h  tim_mex.hpp
tim/matlab/: CMakeLists.txt  TimMatlab.vcproj  TimMatlab.vcxproj  TimMatlab.vcxproj.filters  build_options.txt  build_options_debug.txt  build_tim.m  build_tim_debug.m  build_tim_debug_options.txt  build_tim_develop.m  build_tim_options.txt  build_tim_release_without_openmp.m  building_matlab.txt  check.m  check_signalset.m  compute_lagarray.m  concept_check.m  delay_embed.m  delay_embed_future.m  differential_entropy_kl.m  differential_entropy_kl_t.m  differential_entropy_nk.m  differential_entropy_sp.m  divergence_wkv.m  entropy_combination.m  entropy_combination_t.m  matlab_differential_entropy_generalized_normal.cpp  matlab_differential_entropy_kl.cpp  matlab_differential_entropy_kl_t.cpp  matlab_differential_entropy_kl_tl.cpp  matlab_differential_entropy_nk.cpp  matlab_differential_entropy_normal.cpp  matlab_differential_entropy_sp.cpp  matlab_differential_entropy_uniform.cpp  matlab_divergence_wkv.cpp  matlab_entropy_combination.cpp  matlab_entropy_combination_t.cpp  matlab_mutual_information_naive.cpp  matlab_mutual_information_normal.cpp  matlab_number_of_processors.cpp  (+56 more)
tim/matlab/+tim/: differential_entropy_sp.m  divergence_wkv.m  entropy_combination.m  mutual_information.m  mutual_information_naive.m  mutual_information_t.m  renyi_entropy_lps.m  set_number_of_threads.m  transfer_entropy_pt.m  transfer_entropy_t.m  tsallis_entropy_lps_t.m
(+271 files in other folders)
